# Soft-Agar-Colony-Counter

./: CONTRIBUTING.md  README.md  pyproject.toml  start.bat
.github/workflows/: test-windows.yml
api/: main.py
scripts/: pre-commit  setup-hooks.sh
